--- a/app/views/modificarusuario.scala.html
+++ b/app/views/modificarusuario.scala.html
@@ -4,7 +4,8 @@ Dentro de cada input estan los placeholders de los datos vigentes de ese socio.
 El boton guardar modifica los datos del usuario y devuelve la vista de lista de usuarios. El boton cancelar vuelve a la vista de lista de usuarios.
 *@
 @import models.entities.Usuario
-@(usuario : Usuario)
+@import helper._
+@(userId : Integer, userForm : Form[Usuario])
 
 <!DOCTYPE html>
 <html lang="en">
@@ -14,33 +15,15 @@ El boton guardar modifica los datos del usuario y devuelve la vista de lista de 
     </head>
     <body>
         <div align="center">
-            <form align="left">
-                <table align="center">
-                    <tr></tr>
-                    <tr></tr>
-
-                    <tr>
-                        <td>
-                            <table align="center" border="1">
-                                <tr>
-                                    <td>Nombre: </td>
-                                    <td><input type="text" value="@usuario.getNombre"/></td>
-                                </tr>
-                                <tr>
-                                    <td>Rol: </td>
-                                    <td><input type="text" value="@usuario.getRol"/></td>
-                                </tr>
-
-                                <tr>
-                                    <td></td>
-                                    <td align="center"><input type="button" value="Guardar"></td>
-                                </tr>
-                            </table>
-                        </td>
-                        <td><input type="button" value="Cancelar" ></td>
-                    </tr>
-                </table>
-            </form>
+            @form(action = routes.UserController.editUser(userId) ){
+                @CSRF.formField
+                <input type="hidden" name="userId" value="@userId" />
+                @inputText(userForm("nombre"))
+                @inputText(userForm("email"))
+                @inputPassword(userForm("contrasena"))
+                @inputText(userForm("rol"))
+                <button type="submit">Editar usuario</button>
+            }
         </div>
     </body>
 </html>
