--- a/app/views/modificarusuario.scala.html
+++ b/app/views/modificarusuario.scala.html
@@ -4,6 +4,7 @@ Dentro de cada input estan los placeholders de los datos vigentes de ese socio.
 El boton guardar modifica los datos del usuario y devuelve la vista de lista de usuarios. El boton cancelar vuelve a la vista de lista de usuarios.
 *@
 @import models.entities.Usuario
+@import play.data.Form
 @import helper._
 @(userId : Integer, userForm : Form[Usuario])
 
