--- a/app/views/introducirsocio.scala.html
+++ b/app/views/introducirsocio.scala.html
@@ -1,102 +1,36 @@
+@import helper._
+@import models.entities.Socio
+
+@(socioForm: Form[Socio])
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Introducir Partner</title>
+        <title>Introducir Socio</title>
     </head>
     <body>
-        <div align="center">
-                <table align="center">
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr></tr>
-                    <tr>
-                        <td>
-                            <form action="indexagente.scala.html"> @* Devuelve la vista a lista de socios y guarda al socio en la base de datos *@
-                            <table align="center" border="1">
-                                <tr>
-                                    <td>Nombre: </td>
-                                    <td><input type="text" required/></td>
-                                </tr>
-                                <tr>
-                                    <td>Apellidos: </td>
-                                    <td><input type="text" required/></td>
-                                </tr>
-                                <tr>
-                                    <td>NIF: </td>
-                                    <td><input type="text" required/></td>
-                                </tr>
-                                <tr>
-                                    <td>Dirección: </td>
-                                    <td><input type="text" required/></td>
-                                </tr>
-                                <tr>
-                                    <td>Población: </td>
-                                    <td><input type="text" required/></td>
-                                </tr>
-                                <tr>
-                                    <td>Codigo Postal: </td>
-                                    <td><input type="text" required/></td>
-                                </tr>
-                                <tr>
-                                    <td>Provincia: </td>
-                                    <td><input type="text" required/></td>
-                                </tr>
-                                <tr>
-                                    <td>Telefono Fijo: </td>
-                                    <td><input type="number"/></td>
-                                </tr>
-                                <tr>
-                                    <td>Telefono Móvil: </td>
-                                    <td><input type="number" required/></td>
-                                </tr>
-                                <tr>
-                                    <td>Email: </td>
-                                    <td><input type="email" required/></td>
-                                </tr>
-                                <tr>
-                                    <td>Sector: </td>
-                                    <td><input type="text"/></td>
-                                </tr>
-                                <tr>
-                                    <td>Fecha de alta: </td>
-                                    <td><input type="date" required/></td>
-                                </tr>
-                                <tr>
-                                    <td>Fecha de baja: </td>
-                                    <td><input type="date"/></td>
-                                </tr>
-                                <tr>
-                                    <td>Observaciones: </td>
-                                    <td><input type="text"/></td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td align="center"><input type="button" value="Guardar"></td> @* Guardar al socio en la base de datos *@
-                                </tr>
-                            </table>
-                            </form>
-                        </td>
-                        <form action="indexagente.scala.html"> @* Devuelve la vista a lista de socios *@
-                        <td><input type="button" value="Cancelar" ></td>
-                        </form>
-                    </tr>
-                </table>
+        @form(action = routes.SocioController.addSocio() ){
+            @CSRF.formField
+            @inputText(socioForm("nombre"))
+            @inputText(socioForm("apellidos"))
+            @inputText(socioForm("estado"))
+            @inputText(socioForm("nif"))
+            @inputText(socioForm("direccion"))
+            @inputText(socioForm("poblacion"))
+            @inputText(socioForm("codigoPostal"))
+            @inputText(socioForm("provincia"))
+            @inputText(socioForm("telefonoFijo"))
+            @inputText(socioForm("telefonoMovil"))
+            @inputText(socioForm("email"))
+            @inputText(socioForm("relacion"))
+            @inputText(socioForm("sector"))
+            @inputDate(socioForm("fechaAlta"))
+            @inputDate(socioForm("fechaBaja"))
+            @inputText(socioForm("observaciones"))
 
-        </div>
+
+            <button type="submit">Añadir socio</button>
+        }
     </body>
 </html>
