--- a/app/views/introducirregistro.scala.html
+++ b/app/views/introducirregistro.scala.html
@@ -2,6 +2,7 @@
 @import controllers.RegistroEconomicoController
 @import play.data.Form
 @import helper._
+@import models.entities.Proyecto
 @(registroForm : Form[RegistroEconomico])
 
 <!DOCTYPE html>
@@ -11,17 +12,17 @@
         <title>Introducir Usuario</title>
     </head>
     <body>
-        @form(action = routes.RegistroEconomicoController.addRegistro() ){
+        @form(action = routes.RegistroEconomicoController.addRegistro(2) ){
             @CSRF.formField
-            @inputText(registroForm("Fecha"))
+            @inputDate(registroForm("Fecha"))
             @inputText(registroForm("Tipo"))
             @inputText(registroForm("Concepto"))
             @inputText(registroForm("Importe"))
-            @inputText(registroForm("Codigo beneficiario"))
+            @inputText(registroForm("Codigo Beneficiario"))
             @inputText(registroForm("Observaciones"))
-            @inputText(registroForm("Codigo servicio"))
+            @inputText(registroForm("Codigo Servicio"))
             @inputText(registroForm("Proyecto"))
-            @inputText(registroForm("Numero socio"))
+            @inputText(registroForm("Numero Socio"))
             @inputText(registroForm("Responsable"))
             <button type="submit">Añadir registro economico</button>
         }
