--- a/app/views/recuperar_contrasena.scala.html
+++ b/app/views/recuperar_contrasena.scala.html
@@ -2,12 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Recuperación</title>
+        <title>Recuperación de Contraseña</title>
     </head>
     <body>
-        <div align="center">
-            <h3>La nueva contraseña ha sido enviada a su email.</h3>
-            <a href="login.scala.html">Volver</a>
-        </div>
     </body>
 </html>
