--- a/app/views/create_socio.scala.html
+++ b/app/views/create_socio.scala.html
@@ -28,8 +28,8 @@
             @inputDate(socioForm("fechaAlta"))
             @inputDate(socioForm("fechaBaja"))
             @inputText(socioForm("observaciones"))
-
-
+            @inputText(socioForm("responsable"))
+            @inputText(socioForm("contribucionEconomico"))
             <button type="submit">Añadir socio</button>
         }
     </body>
