--- a/app/views/create_egreso.scala.html
+++ b/app/views/create_egreso.scala.html
@@ -18,15 +18,15 @@
                 @inputDate(ingresoForm("fecha"))
                 @inputText(ingresoForm("concepto"))
                 @inputText(ingresoForm("importe"))
-                @select(ingresoForm("bAlumnos"), options = options(bAlumnos))
-                @select(ingresoForm("bColaboradores"), options = options(bColaboradores))
-                @select(ingresoForm("bTerceros"), options = options(bTerceros))
-                @select(ingresoForm("tipo_beneficiario"), options = options(bSocios))
+                @select(ingresoForm("beneficiarioAlumnos"), options = options(bAlumnos))
+                @select(ingresoForm("beneficiarioColaboradores"), options = options(bColaboradores))
+                @select(ingresoForm("beneficiarioTerceros"), options = options(bTerceros))
+                @select(field = myForm("tipoBeneficiario"), options = Seq("Alumno" -> "Alumno", "Colaborador" -> "Colaborador", "Tercero" -> "Tercero", "Socio" -> "Socio"))
                 @inputText(ingresoForm("observaciones"))
                 @select(ingresoForm("partida"), options = options(partidas))
                 @select(ingresoForm("proyecto"), options = options(proyectos))
                 @inputText(ingresoForm("creador"))
-                @select(ingresoForm("roles"), options = options(roles))
+                @select(ingresoForm("responsable"), options = options(responsables))
                 @inputText(ingresoForm("validado"))
                 <button type="submit">Crear ingreso</button>
             }
