--- a/app/views/index_ingresos.scala.html
+++ b/app/views/index_ingresos.scala.html
@@ -30,7 +30,7 @@
             <td>@ingreso.getPartida</td>
             <td>@ingreso.getProyecto</td>
             <td>@ingreso.getCreador</td>
-            <td>@ingreso.getValido</td>
+            <td>@ingreso.isValidado</td>
             <td>@ingreso.getResponsable</td>
         </tr>
     }
