--- a/app/views/edit_alumno.scala.html
+++ b/app/views/edit_alumno.scala.html
@@ -24,22 +24,16 @@
                 @inputText(alumnoForm("nombre"))
                 @inputText(alumnoForm("apellidos"))
                 @inputText(alumnoForm("estado"))
-                @inputText(alumnoForm("nif"))
-                @inputText(alumnoForm("direccion"))
-                @inputText(alumnoForm("poblacion"))
-                @inputText(alumnoForm("codigoPostal"))
-                @inputText(alumnoForm("provincia"))
-                @inputText(alumnoForm("telefonoFijo"))
-                @inputText(alumnoForm("telefonoMovil"))
-                @inputText(alumnoForm("email"))
-                @inputText(alumnoForm("relacion"))
-                @inputText(alumnoForm("certificado"))
-                @inputText(alumnoForm("sector"))
-                @inputDate(alumnoForm("fechaAlta"))
-                @inputText(alumnoForm("fechaBaja"))
+                @inputText(alumnoForm("sexo"))
+                @inputText(alumnoForm("fechaNacimiento"))
+                @inputText(alumnoForm("fechaEntradaAcoes"))
+                @inputText(alumnoForm("fechaAlta"))
+                @inputText(alumnoForm("fechaSalidaAcoes"))
+                @inputText(alumnoForm("gradoCurso"))
+                @inputText(alumnoForm("coloniaProcedencia"))
+                @inputText(alumnoForm("coloniaActual"))
                 @inputText(alumnoForm("observaciones"))
-                @inputText(alumnoForm("respondable"))
-                @inputText(alumnoForm("contribucionEconomica"))
+                @inputText(alumnoForm("apadrinable"))
                 <button type="submit">Editar alumno</button>
             }
     </div>
