--- a/app/views/index_alumnos.scala.html
+++ b/app/views/index_alumnos.scala.html
@@ -36,6 +36,13 @@
             <td>@alumno.getColoniaProcedencia</td>
             <td>@alumno.getColoniaActual</td>
             <td>@alumno.getObservaciones</td>
+            <td>
+            @form(action = routes.AlumnoController.renderEditAlumno(alumno.getCodigo)) {
+                @helper.CSRF.formField
+                <input type="hidden" name="alumnoId" value="@alumno.getCodigo" />
+                <button type="submit">Editar alumno"</button>
+            }
+            </td>
         </tr>
     }
     @form(action = routes.AlumnoController.renderCreateAlumno()) {
