--- a/app/views/create_ingreso.scala.html
+++ b/app/views/create_ingreso.scala.html
@@ -1,7 +1,8 @@
 @import models.entities.Ingreso
 @import helper._
 @import java.util
-@(ingresoForm: Form[Ingreso], proyectos: List[String], partidas: List[String])
+@import models.forms.IngresoForm
+@(ingresoForm: Form[IngresoForm], proyectos: List[String], partidas: List[String])
 
 <!DOCTYPE html>
 <html lang="en">
@@ -21,8 +22,6 @@
                 @select(ingresoForm("partida"), options = options(partidas))
                 @select(ingresoForm("proyecto"), options = options(proyectos))
                 @inputText(ingresoForm("creador"))
-                @inputText(ingresoForm("validado"))
-                @inputText(ingresoForm("responsable"))
                 <button type="submit">Crear ingreso</button>
             }
         </div>
